# zelvex

./: .gitignore  Cargo.toml  README.md
contracts/: ZelvexArb.sol  foundry.toml
contracts/test/: ZelvexArb.t.sol
web-ui/: app.js  index.html  style.css
zelvex-api/: Cargo.toml
zelvex-api/src/: lib.rs
zelvex-bin/: Cargo.toml
zelvex-bin/src/: main.rs
zelvex-config/: Cargo.toml
zelvex-config/src/: lib.rs
zelvex-core/: Cargo.toml
zelvex-core/src/: amm.rs  lib.rs  node.rs  scanner.rs  sync.rs  sync_subscriber.rs
zelvex-db/: Cargo.toml
zelvex-db/migrations/: 0001_users.sql  0002_trades.sql  0003_opportunities.sql  0004_gas_history.sql  0005_bot_state.sql  0006_trades_add_simulated_status.sql
zelvex-db/src/: lib.rs
zelvex-exec/: Cargo.toml
zelvex-exec/src/: executor.rs  flashbots.rs  inclusion.rs  lib.rs  tx_builder.rs
zelvex-gas/: Cargo.toml
zelvex-gas/src/: lib.rs
zelvex-sim/: Cargo.toml
zelvex-sim/src/: backtest.rs  lib.rs
zelvex-types/: Cargo.toml
zelvex-types/src/: lib.rs
