[workspace]
members = [
  "zelvex-types",
  "zelvex-config",
  "zelvex-db",
  "zelvex-gas",
  "zelvex-core",
  "zelvex-sim",
  "zelvex-exec",
  "zelvex-api",
  "zelvex-bin",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.3", features = [
  "full",
  "providers",
  "transport-ws",
  "contract",
  "sol-types",
  "signers",
  "signer-local",
  "rpc-types",
  "consensus",
  "serde",
] }
argon2 = "0.5"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
