[package]
name = "zelvex-bin"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
zelvex-api = { path = "../zelvex-api" }
zelvex-config = { path = "../zelvex-config" }
zelvex-db = { path = "../zelvex-db" }
zelvex-exec = { path = "../zelvex-exec" }
