[package]
name = "zelvex-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zelvex-exec = { path = "../zelvex-exec" }
zelvex-gas = { path = "../zelvex-gas" }
zelvex-sim = { path = "../zelvex-sim" }
zelvex-db = { path = "../zelvex-db" }
zelvex-types = { path = "../zelvex-types" }

[dev-dependencies]
serde_json = { workspace = true }
tokio-tungstenite = "0.23"
