[package]
name = "zelvex-exec"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zelvex-config = { path = "../zelvex-config" }
zelvex-db = { path = "../zelvex-db" }
zelvex-types = { path = "../zelvex-types" }
