[package]
name = "zelvex-gas"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zelvex-db = { path = "../zelvex-db" }
zelvex-types = { path = "../zelvex-types" }
